# Zonulet-contracts-rust

./: Cargo.toml  Makefile  README.md  _rust_setup.sh  package.json
tests/: simulation_tests.rs
zonulet-nft-contract/: Cargo.toml
zonulet-nft-contract/src/: lib.rs
