[package]
name = "zonulet-nft-contract-wrapper"
version = "0.0.1"
authors = ["Agin <info@zonulet.io>"]
edition = "2022"

[dev-dependencies]
near-sdk = "=3.1.0"
near-contract-standards = "3.2.0"
near-sdk-sim = "=3.1.0"
zonulet-nft-contract = { path = "./zonulet-nft-contract" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
  "zonulet-nft-contract",
]